Added Bluetooth setting to prefs
	modified:   res/values/strings.xml
	modified:   res/xml/communication_preferences.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -85,4 +85,5 @@
 	<string name="minus_label"> - </string>
 	<string name="prefs_bluetooth_settings_title">Bluetooth</string>
 	<string name="prefs_bluetooth_settings_summary">go to Bluetooth System Settings&#8230;</string>
+	<string name="prefs_comm_type_title">Communication type</string>
 </resources>
