Introduced new icons
	modified:   AndroidManifest.xml
	deleted:    res/drawable/android1.png
	renamed:    res/drawable/icon.png -> res/drawable/app_icon.png
	deleted:    res/drawable/console.png
	modified:   res/drawable/find_room.png
	new file:   res/drawable/help.png
	modified:   res/drawable/info.png
	renamed:    res/drawable/info.png -> res/drawable/info1.png
	modified:   res/drawable/map_small.jpg
	modified:   res/drawable/prefs.png
	new file:   res/drawable/show_location.png
	deleted:    res/drawable/your_location.png
	modified:   res/menu/menu.xml
	modified:   res/values/strings.xml
	modified:   src/de/unierlangen/like/rfid/ReaderService.java
	modified:   src/de/unierlangen/like/ui/OptionsMenuActivity.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,7 @@
 	<string name="error_configuration">Please configure your serial port first.</string>
 	<string name="error_security">You do not have read/write permission to the serial port.</string>
 	<string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
-	<string name="app_name"><b>RFID-UHF for Neo OpenMoko</b></string>
+	<string name="app_name"><b>RFID and NFC indoor positioning</b></string>
 	<string name="menu_titel"><b>Menu</b></string>
 	<string name="testmode_titel">Test Mode</string>
 	<string name="reader_titel">Reader Registers List</string>
