--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -86,4 +86,6 @@
 	<string name="prefs_bluetooth_settings_title">Bluetooth</string>
 	<string name="prefs_bluetooth_settings_summary">go to Bluetooth System Settings&#8230;</string>
 	<string name="prefs_comm_type_title">Communication type</string>
+	<string name="help_frag1">Adin</string>
+	<string name="help_frag2">Dva</string>
 </resources>
